# S4-Vaultify

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  index.html  output.enc  package-lock.json  package.json  vite.config.js
.github/workflows/: ci.yml
assets/: aide   index.html  main.css  scripts.js  styles.css
assets/aes_test/: video_test.bin.dec  video_test.bin.enc
binary_files/: map.json
certificate/: cert.csr  cert.pem  key.pem
certs/: certificate.crt  private.key  private_key_pkcs8.der  private_unencrypted.key
frontend/: CreateUser.jsx  Home.jsx  Index.jsx  Login.jsx  create.css  home.css  index.css  index.html  login.css  main.jsx
serverback/: Cargo.toml
serverback/src/: main.rs  models.rs
src/: error_manager.rs  lib.rs  main.rs
src/backend/: mod.rs  vault_manager.rs
src/backend/account_manager/: account.rs  account_server.rs  mod.rs  password_manager.rs
src/backend/aes_keys/: crypted_key.rs  decrypted_key.rs  exemple utilisation  keys_password.rs  mod.rs
src/backend/auth/: email.rs  mod.rs
src/backend/file_flow/: file_flow.rs  mod.rs  receive_from.rs  send_to.rs
src/backend/file_manager/: file_handling.rs  mapping.rs  metadata_handing.rs  metadata_handling.rs  mod.rs  test split
src/backend/passw/: manager.rs
src/backend/pw_manager/: manager.rs
src/backend/server_manager/: account_manager.rs  global_manager.rs  mod.rs  pw_manager.rs  vault_manager.rs
src/backend/server_manager/file_manager/: file_handler.rs  file_tree.rs  mod.rs
static/: VaultCard.css  app.bundle.js  app.js  create.css  home.css  index.css  index.html  login.html  register.html  style.css  styles.css  test.json
static/assets/: style--5GXHQpj.css  style-7Vlwd3k6.css  style-B5nBrcXC.css  style-BHm4vTUw.css  style-BSPWve2v.css  style-BapES7Kq.css  style-Bl8gvz8U.css  style-C5TDd0ie.css  style-C9jLX9RU.css  style-CGQ6YiLm.css  style-CGVyZ-jJ.css  style-CHzgxAZZ.css  style-CJetTcSz.css  style-CLTLyptQ.css  style-CTEjIfSl.css  style-Cl_NyAw2.css  style-DAnBZTbp.css  style-DKEKvB4F.css  style-DM2Boq0R.css  style-DW-GRDfx.css  style-d9JyTLof.css  style-gojWayfN.css
templates/: base.html  create_user.html  create_vault.html  home.html  index.html  login.css  login.html  register.html  vault_detail.html  vaults.html
test-files/: main.rs
web/: Cargo.toml  index.html
web/src/: main.rs
