[package]
name = "s4-vaultify"
version = "0.1.0"
authors = ["matevl <144525314+matevl@users.noreply.github.com>"]
edition = "2021"

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
bcrypt = "0.12"
ring = "0.17.9"
sha2 = "0.10"
actix-web = "4.0.1"
lazy_static = "1.5.0"
spin = "0.9.8"
regex = "1.11.1"
dirs = "6.0.0"
reqwest = { version = "0.12.12", features = ["json"] }
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
futures = "0.3.31"
jsonwebtoken = "8.1"
actix-service = "2.0"
actix-files = "0.6"
webbrowser = "0.5"
rand = "0.9"
infer = "0.19"
kamadak-exif = "0.6.1"
ffmpeg-next = "7.1.0"
tempfile = "3.16.0"
zip = "2.2.2"
lopdf = "=0.35.0"
rustls = "0.23.25"
tokio-rustls = "0.26.2"
anyhow = "1.0.97"
rustls-pemfile = "2.2.0"
rustls-pki-types = "1.11.0"




[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[lib]
crate-type = ["cdylib", "rlib"]



