[package]
name = "s4-vaultify"
version = "0.1.0"
authors = ["matevl", "Lothaire07", "agrownboy", "paul7436"]
edition = "2021"

[dependencies]
lettre = { version = "0.11.2", features = ["builder", "smtp-transport"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
bcrypt = "0.12"
ring = "0.17.9"
sha2 = "0.10"
actix-web = { version = "4.0.1", features = ["rustls"] }
lazy_static = "1.5.0"
dirs = "6.0.0"
reqwest = { version = "0.12.12", features = ["json"] }
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
actix-files = "0.6"
webbrowser = "0.5"
rand = "0.9"
tokio-rustls = "0.23"
rustls-pemfile = "2.2.0"
uuid = { version = "1.16.0", features = ["v4"] }
rusqlite = { version = "0.34.0", features = ["bundled"] }
rustls = "0.20"
askama = "0.12"
tera = "1.19.0"
moka = "0.10"


[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[lib]
crate-type = ["cdylib", "rlib"]



