[package]
name = "web"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = "0.6.3"
dioxus-web = "0.6.3"
wasm-bindgen = "0.2"
reqwest = { version = "0.11", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.218", features = ["derive"] }
actix-web = "4.0.1"
s4-vaultify =  {path = "../"}
[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
